# cataverse.ai

./: .gitignore  AGENTS.md  DIRECTORY_STRUCTURE.md  LICENSE  README.md  REFACTORING_PLAN.md  actuator_control.py  context.md  data_logging.py  data_processing.py  directory_structure.md  experiment_protocols.py  instrument_operations.py  ir_peakFit_carbonyl_v5.py  kasa_smartPlug.py  main.py  main_v2.py  ni_usb6009_devices.py  null  opencode.json  opusAcquire_4.py  opusWrapper.py  opusWrapper_v2.py  pyproject.toml  readParams.py  requirements.txt  serial_devices.py  subtractIFG.py  test.py  tpd_postProcess.py
docs/: README.md  (+11 more)
ir-spectro-node/: .gitconfig  .gitignore  .viminfo  AGENTS.md  README.md  opencode.json  pyproject.toml
ir-spectro-node/.opencode/: directory_structure.md  foundations.md  memory.md
ir-spectro-node/.opencode/agent/: architect.md  reviewer.md  validator.md
ir-spectro-node/config/: paths.yaml
ir-spectro-node/docs/: migration_notes.md
ir-spectro-node/scripts/: run_analysis.py  run_norhoff.py  run_server.py
ir-spectro-node/src/analysis/: .agent.md  .spec.md  integrate_ir_iso_xchg.py  io.py  kinetics_fitting.py  main.py  spectral_fitting.py
ir-spectro-node/src/core/: config.py
ir-spectro-node/src/instrument/: .agent.md  .spec.md  __init__.py  acquisition.py  client.py  dispatch.py  server.py  state.py
ir-spectro-node/src/utils/: kinetic_fit_writer.py  norhof.py  readme.py  rename_files.py  subtract_ifg_manual.py
ir-spectro-node/src/visualizations/: plot_area_vs_time.py  plot_monomer_cluster_fit.py  plot_params.py  plot_spectrum_fit.py
(+429 files in other folders)
