[project]
name = "ir-spectro-node"
version = "0.1.0"
description = "ir-spectro-node for cataverse"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lmfit>=1.3.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pybaselines>=1.2.1",
    "pyzmq>=27.1.0",
    "scipy>=1.17.0",
]
